# libmugen

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
archive/: README.md
include/: MUGEN.hpp  MUGEN_TYPE.hpp  _MUGEN_TYPES.hpp  afterimage.hpp  ai.hpp  anim.hpp  arith.hpp  array.hpp  bg.hpp  bgm.hpp  charsel.hpp  clipboard.hpp  clsn.hpp  collision.hpp  command.hpp  common.hpp  controller.hpp  date.hpp  ebcommon.hpp  explod.hpp  font.hpp  game.hpp  input_menu.hpp  joystick.hpp  kbi.hpp  main.hpp  pallete.hpp  player.hpp  projectile.hpp  sound.hpp  sprite.hpp  state.hpp  system.hpp  trigger.hpp  txtparse.hpp  vbuf.hpp
source/: mugen.cpp
